# lion

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
etc/: config.json
src/: hal.rs  handler.rs  main.rs  server.rs
src/hal/: power.rs  sysinfo.rs
