[package]
name = "lion"
version = "0.1.0"
authors = ["Alexey Pashinov <pashinov93@gmail.com>"]
edition = "2018"

[build-dependencies]
protoc-rust = "2.14"

[dependencies]
clap = "2.33"
config = "0.10"
daemonize = "0.4"
log = "0.4"
log4rs = "0.12"
protobuf = "=2.14"
signal-hook = "0.1"
systemstat = "0.1"
system_shutdown = "3.0"
sys-info = "0.7"
zmq = "0.9"
