[package]
name = "lion"
version = "0.1.1"
authors = ["Alexey Pashinov <pashinov93@gmail.com>"]
edition = "2018"

[build-dependencies]
protoc-rust = "2.14"

[dependencies]
clap = "2.33.3"
config = "0.10.1"
daemonize = "0.4.1"
log = "0.4.11"
log4rs = "0.13.0"
platforms = "0.2.1"
protobuf = "=2.14"
signal-hook = "0.1.16"
systemstat = "0.1.5"
system_shutdown = "3.0.0"
sys-info = "0.7.0"
zmq = "0.9.2"
